--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -605,3 +605,20 @@
   height: 100%;
   width: 100%;
 }
+.qr-code-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+}
+
+.qr-code {
+  width: 200px;
+  height: 200px;
+}
+
+.close-qr-code {
+  margin-top: 10px;
+}
+
