--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -304,6 +304,10 @@
         margin-right: 0;
         margin-top: 15px;
       }
+       .sidebar-action2 {
+        margin-right: 0;
+        margin-top: 30px;
+      }
     }
   }
 }
